spec/v1.9/node-capability-format.md
# IICP Node Capability Format

**Version**: 0.2.0
**Date**: 2026-08-14
**Status**: draft  
**Issue**: #19  
**Authority**: Protocol Steward  
**Relation**: SPEC_ANALYSIS.md GAP-4, ADR-007, IICP-DIR §3.1

---

## 1. Purpose

IICP v1.4.2 uses a generic `capabilities` array in REGISTER but leaves the object
schema unspecified. This document defines the canonical capability object format for
all Phase 1 node types. It is normative for REGISTER payloads and NODELIST responses.

---

## 2. Base Capability Object

All capability objects share this base schema:

```json
{
  "intent": "urn:iicp:intent:llm:chat:v1",
  "version": "1",
  "phase": 1
}
```

| Field | Type | Required | Notes |
|-------|------|----------|-------|
| `intent` | string | MUST | Full intent URN per ADR-007 |
| `version` | string | SHOULD | Capability version; "1" if absent |
| `phase` | integer | MAY | Minimum IICP phase required; 1 if absent |
| `variant_id` | string | MAY | Opaque node-scoped identifier for one stable effective service variant |
| `input_modalities` | string[] | MAY | Media accepted by this complete service path |
| `output_modalities` | string[] | MAY | Media produced by this complete service path |
| `features` | string[] | MAY | Inference/service features such as `structured_output` or `tool_calling` |
| `execution_capabilities` | string[] | MAY | Runtime actions such as `tool_execution`; these remain policy-controlled |
| `limits` | object | MAY | Typed quantitative limits represented as `{value, unit}` |
| `supported_profiles` | string[] | MAY | Negotiated IICP Profile identifiers supported by this variant |
| `claim_provenance` | object | MAY | Bounded source and freshness for the capability claim |
| `extensions` | object | MAY | Namespaced required or optional extension values |

All additional fields are capability-type-specific (§3–§7). Model and token
fields are conditional: `models` is required only when model identity or
selection belongs to the intent contract, and `max_tokens` only where an output
token limit is meaningful.

The opt-in `urn:iicp:profile:effective-capability:v1` contract publishes the
exact additive advertisement, requirements and refusal schemas in
`schemas/effective-capability-advertisement-v1.json`,
`schemas/capability-requirements-v1.json` and
`schemas/capability-refusal-v1.json`. Implementations that do not advertise or
consume this Profile continue using the base capability format. The Profile
does not create an HTTP endpoint or change the existing modality query.

---

## 3. LLM Inference Capability

For nodes serving language model inference.

> **Cross-ref (v0.1.1):** two register-time fields are specced normatively in `iicp-dir.md §3.1`, not
> duplicated here: `capabilities[].input_modalities` (`["text"]` default, `["text","image"]` for vision;
> ADR-046) and the top-level `operator_delegation` object (ed25519 operator→node binding; ADR-045 Phase A).

```json
{
  "intent": "urn:iicp:intent:llm:chat:v1",
  "models": ["llama3", "mistral-7b"],
  "max_tokens": 8192,
  "context_length": 32768,
  "supports_streaming": false,
  "quantization": "q4_k_m",
  "inference_engine": "llama.cpp",
  "hardware": "cuda",
  "avg_tokens_per_second": 45.0
}
```

| Field | Type | Required | Notes |
|-------|------|----------|-------|
| `models` | string[] | MUST | Model identifiers served |
| `max_tokens` | integer | MUST | Max output tokens per request |
| `context_length` | integer | SHOULD | Max context window (input + output) |
| `supports_streaming` | bool | MAY | Default false (Phase 1) |
| `quantization` | string | MAY | e.g., `q4_k_m`, `fp16`, `awq` |
| `inference_engine` | string | MAY | e.g., `llama.cpp`, `ollama`, `vllm`, `exllamav2` |
| `hardware` | string | MAY | `cuda`, `metal`, `cpu`, `rocm` |
| `avg_tokens_per_second` | float | MAY | Self-reported throughput estimate |

**Embeddings**:

```json
{
  "intent": "urn:iicp:intent:llm:embed:v1",
  "models": ["nomic-embed-text"],
  "max_tokens": 8192,
  "dimensions": 768,
  "batch_size": 32
}
```

**Audio transcription (speech-to-text, #414)**:

```json
{
  "intent": "urn:iicp:intent:audio:transcribe:v1",
  "models": ["whisper-large-v3"],
  "inference_engine": "whisper.cpp",
  "hardware": "metal"
}
```

The CALL payload carries the audio as base64 (`audio`) plus optional `language` /
`response_format` / `prompt`; the node posts it as a multipart file upload to the
backend's OpenAI-dialect `/v1/audio/transcriptions` endpoint (Whisper-class backends).
See `registry/intents.json` for the authoritative payload schema.

**Text-to-speech (#414)**:

```json
{
  "intent": "urn:iicp:intent:audio:speech:v1",
  "models": ["tts-1"],
  "inference_engine": "espeak-ng"
}
```

The CALL payload carries the text to synthesize (`input`) plus optional `voice` /
`response_format` / `speed`; the node posts JSON to the backend's OpenAI-dialect
`/v1/audio/speech` endpoint and base64-encodes the returned binary audio into
`result.audio` (with `content_type` + `format`). See `registry/intents.json`.

**Content moderation (#414)**:

```json
{
  "intent": "urn:iicp:intent:safety:moderate:v1",
  "models": ["toxic-bert"]
}
```

The CALL payload carries the text to moderate (`input`, string or array); the node
posts JSON to the backend's OpenAI-dialect `/v1/moderations` endpoint and returns the
`{results: [{flagged, categories, category_scores}]}` verbatim. `model` is OPTIONAL
(the backend supplies a fixed moderation model). See `registry/intents.json`.

---

## 4. MCP Tool Execution Capability

For nodes that execute MCP tool calls (see `iicp-mcp-binding.md`).

```json
{
  "intent": "urn:iicp:intent:mcp:tools/call:v1",
  "mcp_tools": ["bash", "read_file", "web_search"],
  "mcp_version": "2026-07-28",
  "mcp_versions": ["2025-11-25", "2026-07-28"],
  "sandboxed": true,
  "allowed_domains": ["*.wikipedia.org"]
}
```

| Field | Type | Required | Notes |
|-------|------|----------|-------|
| `mcp_tools` | string[] | MUST | Tool names the node can execute |
| `mcp_version` | string | MUST | Preferred MCP spec date (ISO 8601); retained for compatibility |
| `mcp_versions` | string[] | MAY | Supported MCP revisions; when present it MUST contain `mcp_version` |
| `sandboxed` | bool | SHOULD | Whether execution is sandboxed |
| `allowed_domains` | string[] | MAY | Network domain allow-list for web tools |

---

## 5. Compute / Batch Capability

For nodes offering general compute or batch task processing.

```json
{
  "intent": "urn:iicp:intent:compute:batch:v1",
  "max_batch_size": 100,
  "supported_formats": ["jsonl", "csv"],
  "max_payload_mb": 50
}
```

---

## 6. Data Retrieval Capability

For nodes providing vector search or knowledge retrieval.

```json
{
  "intent": "urn:iicp:intent:data:retrieval:v1",
  "index_type": "faiss",
  "dimensions": 1536,
  "index_size": 1000000,
  "metric": "cosine"
}
```

---

## 7. Capability Array Rules

A single node MAY declare multiple capabilities:

```json
{
  "capabilities": [
    {
      "intent": "urn:iicp:intent:llm:chat:v1",
      "models": ["llama3"],
      "max_tokens": 8192
    },
    {
      "intent": "urn:iicp:intent:mcp:tools/call:v1",
      "mcp_tools": ["bash"],
      "mcp_version": "2026-07-28",
      "mcp_versions": ["2025-11-25", "2026-07-28"]
    }
  ]
}
```

A node supporting Phase 5 CIP intents (summarization, reranking, classification) uses the `llm:` URN namespace:

```json
{
  "capabilities": [
    {
      "intent": "urn:iicp:intent:llm:chat:v1",
      "models": ["llama3.2"],
      "max_tokens": 8192
    },
    {
      "intent": "urn:iicp:intent:llm:summarize:v1",
      "models": ["llama3.2"],
      "max_length": 512
    },
    {
      "intent": "urn:iicp:intent:llm:rerank:v1",
      "models": ["llama3.2"],
      "max_candidates": 20
    },
    {
      "intent": "urn:iicp:intent:llm:classify:v1",
      "models": ["llama3.2"]
    }
  ]
}
```

**Rules**:
- An intent URN MAY appear more than once when the entries describe distinct
  effective variants, including different modalities, Profiles, features or
  limits.
- When `variant_id` is present, `(intent, variant_id)` MUST be unique within one
  advertisement. Exact duplicate objects are invalid even without a
  `variant_id`.
- The directory MUST index every variant by `intent`. Matching MUST select one
  complete variant and MUST NOT union unrelated fields across variants.
- Registered vocabulary fields and accepted namespaced `extensions` MUST be
  preserved semantically. Unknown unnamespaced top-level fields MAY be ignored
  and MUST NOT be interpreted as support.
- A node with zero valid capabilities MUST NOT be registered (directory returns 422).

---

## 8. NODELIST Propagation

The directory MUST return registered vocabulary fields and any accepted
namespaced `extensions` without semantic modification. A directory that cannot
retain a required extension MUST reject it rather than accept and discard it.
Legacy unknown top-level fields are ignorable; future declarations use the
versioned extension container:

```json
{
  "node_id": "uuid",
  "endpoint": "https://node.example.com",
  "score": 0.91,
  "capabilities": [
    {
      "intent": "urn:iicp:intent:llm:chat:v1",
      "models": ["llama3"],
      "max_tokens": 8192
    }
  ]
}
```

The `capabilities` array is informational. Clients SHOULD validate that the selected
node actually supports their intent before submitting a CALL.

---

## 9. Provider Policy Block (Phase 5 — Cooperative Inference Profile)

Nodes participating in the Cooperative Inference Profile declare a `policy` block
in REGISTER alongside their capabilities. This block is optional in Phase 1–4 and
ignored by nodes that do not implement the CIP.

```json
{
  "node_id": "moltbot-node-123",
  "endpoint": "https://node.example.net",
  "capabilities": [ ... ],
  "policy": {
    "allow_remote_inference": true,
    "allow_tool_execution": false,
    "allow_file_access": false,
    "allow_shell_execution": false,
    "allow_browser_automation": false,
    "allow_private_memory_access": false,
    "minimum_caller_reputation": 0.70,
    "require_credits": true,
    "minimum_reputation": 0.5,
    "max_concurrent_remote": 2
  },
  "pricing": {
    "accepts_credits": true,
    "credits_per_1000_tokens": 1.0,
    "free_tier_tokens": 0
  }
}
```

| Field | Default | Notes |
|-------|---------|-------|
| `allow_remote_inference` | false | Must be `true` to participate in CIP |
| `allow_tool_execution` | false | MUST NOT be `true` unless the node is an explicit MCP exec node |
| `allow_file_access` | false | MUST remain false for cooperative inference |
| `allow_shell_execution` | false | MUST remain false — safety boundary |
| `allow_browser_automation` | false | MUST remain false — safety boundary |
| `allow_private_memory_access` | false | MUST remain false — safety boundary |
| `minimum_caller_reputation` | 0.0 | Caller reputation score threshold (0.0 = accept all) |
| `require_credits` | false | If true, caller must have credits before task is accepted |
| `minimum_reputation` | 0.0 | CIP-specific: minimum reputation score of the requesting coordinator (0.0 = accept any); used in §2.1 Provider Opt-In gate. If the coordinator's `reputation_score` is below this value, the provider MUST reject with `IICP-E020`. |
| `max_concurrent_remote` | 2 | Maximum simultaneous inbound CIP sub-tasks this node will accept. If reached, MUST return `IICP-E021` (capacity exhausted). MUST NOT silently queue. |

The directory MUST return `policy` in NODELIST. Clients MUST pre-screen nodes for
policy compatibility before submitting a CALL (e.g., skip nodes with
`allow_remote_inference: false`).

---

## 10. Versioning

Capability format versions follow semver major only:
- `v1` — Phase 1 (this document)
- `v2` — Phase 3 (adds reputation data, signed capability attestation)
- `v3` — Phase 5 (adds `policy` and `pricing` blocks for Cooperative Inference Profile)

The intent URN suffix (`:v1`) is the capability format version, distinct from the
protocol version.

---

## Changelog

| Version | Date | Change |
|---------|------|--------|
| 0.2.0 | 2026-08-14 | Defines effective variants, conditional inference fields and namespaced extension preservation; the coordinated wire rollout remains pending. |
| 0.1.3 | 2026-07-31 | MCP capabilities retain singular `mcp_version` as the preferred revision and may add `mcp_versions` for explicit multi-revision negotiation. |
| 0.1.2 | 2026-05-17 | §9 policy block: added `minimum_reputation` and `max_concurrent_remote` fields with IICP-E020/E021 error references; closes #72 |
| 0.1.0 | 2026-05-14 | Initial draft — capability object schema, intent URN format, policy block (Phase 5 reserved); closes issue #19 |
| 0.1.1 | 2026-05-15 | Added Changelog section (A6 spec cleanup) |

---

## Sign-off

**Protocol Steward**: Capability format fills GAP-4 from SPEC_ANALYSIS.md. §9 (policy
block) is reserved for Phase 5 Cooperative Inference Profile — additive, backward
compatible. Closes GitHub issue #19 (draft). ✓
